fix(products): verify actions and result context